--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,9 @@
-.header{
-  background: #69F0AE;
-  font-size: 64px;
+.logo {
+  background-image: url("../../images/logo-header.png");
+  height: 48px;
+  width: 186px;
+  display: block;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
 }
