--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,9 @@
-.footer{
-  background: #69F0AE;
-  font-size: 64px;
+.footer-logo {
+  background-image: url("https://github.com/chunjull/2023F2E-Campaign-Website/blob/main/assets/images/logo-footer.png?raw=true");
+  height: 93px;
+  width: 236px;
+  display: block;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
 }
