--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .logo {
-  background-image: url("../../images/logo-header.png");
-  height: 48px;
-  width: 186px;
+  background-image: url("https://github.com/chunjull/2023F2E-Campaign-Website/blob/main/assets/images/logo-header.png?raw=true");
+  height: 61px;
+  width: 236px;
   display: block;
   text-indent: 101%;
   overflow: hidden;
