--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,34 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer bg-black py-9">
+  <div class="container mb-7 mb-lg-9 d-flex flex-column flex-lg-row justify-content-between">
+    <div>
+      <h2 class="mb-5 mb-lg-0">
+        <a href="index.html" class="footer-logo"></a>
+      </h2>
+      <ul class="list-unstyled d-flex d-lg-none">
+        <li class="pe-5"><a href="#"><i class="ph ph-facebook-logo fs-3 text-white"></i></a></li>
+        <li class="pe-5"><a href="#"><i class="ph ph-instagram-logo fs-3 text-white"></i></a></li>
+        <li><a href="#"><i class="ph ph-youtube-logo fs-3 text-white"></i></a></li>
+      </ul>
+    </div>
+    <div class="d-flex flex-column flex-lg-row gap-9">
+      <div>
+        <h5 class="fs-6 text-primary mb-3 mb-lg-5">快速連結</h5>
+        <ul class="list-unstyled d-flex flex-row flex-lg-column mb-0">
+          <li class="me-5 me-lg-0 mb-lg-1"><a href="#" class="text-white">首頁</a></li>
+          <li class="me-5 me-lg-0 mb-lg-1"><a href="#" class="text-white">最新活動</a></li>
+          <li class="me-5 me-lg-0 mb-lg-1"><a href="#" class="text-white">政策議題</a></li>
+          <li><a href="#" class="text-white">小額捐款</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="fs-6 text-primary mb-3 mb-lg-5">與我們聯繫</h5>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-1"><a href="#" class="text-white"><i class="ph ph-map-pin text-primary align-middle me-1"></i>新星區閃耀大道88號 喵喵大樓3樓</a></li>
+          <li class="mb-1"><a href="#" class="text-white"><i class="ph ph-phone text-primary align-middle me-1"></i>(02) 888-5678</a></li>
+          <li><a href="#" class="text-white"><i class="ph ph-envelope text-primary align-middle me-1"></i>supernova.black@gmail.com</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <p class="text-white text-center mb-0">© 2023 黑新星 Supernova Black 版權所有。</p>
+</footer>
