--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -29,10 +29,10 @@
           <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
-      <ul class="list-unstyled d-flex">
-        <li><a href="#"><i class="ph ph-facebook-logo"></i></a></li>
-        <li><a href="#"><i class="ph ph-instagram-logo"></i></a></li>
-        <li><a href="#"><i class="ph ph-youtube-logo"></i></a></li>
+      <ul class="list-unstyled d-flex flex-column flex-lg-row">
+        <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-facebook-logo fs-2 text-black"></i></a></li>
+        <li class="pe-lg-5 pb-5 pb-lg-0"><a href="#"><i class="ph ph-instagram-logo fs-2 text-black"></i></a></li>
+        <li class="pe-lg-0 pb-5 pb-lg-0"><a href="#"><i class="ph ph-youtube-logo fs-2 text-black"></i></a></li>
       </ul>
     </div>
   </div>
