--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -411,11 +411,19 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  1: $spacer * .25, // 4px
+  2: $spacer * .375, // 6px
+  3: $spacer * .5, //8px
+  4: $spacer * .75, //12px
+  5: $spacer , //16px
+  6: $spacer * 1.25, //20px
+  7: $spacer * 1.5, // 24px
+  8: $spacer * 1.75, //28px
+  9: $spacer * 2, //32px
+  10 : $spacer * 2.25, //36px
+  11: $spacer * 2.5, //40px
+  12: $spacer * 3, //48px
+  13: $spacer * 4, //64px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -452,7 +460,7 @@ $body-emphasis-color:       $black !default;
 // Style anchor elements.
 
 $link-color:                              $primary !default;
-$link-decoration:                         underline !default;
+$link-decoration:                         none !default; //custom
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
 $link-hover-decoration:                   null !default;
@@ -647,7 +655,8 @@ $font-sizes: (
   4: $h4-font-size, //24px
   5: $h5-font-size, //20px
   6: $h6-font-size, //16px
-  7: $font-size-base * 3, //48px
+  7: $font-size-base * .875, //14px
+  8: $font-size-base * 3, //48px
 ) !default;
 // scss-docs-end font-sizes
 
