--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,20 @@
-.index-title {
-  font-size: 100px;
+.banner-bg {
+  background-image: url("https://github.com/chunjull/2023F2E-Campaign-Website/blob/main/assets/images/banner-lg.png?raw=true");
+  width: 1296px;
+  height: 640px;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
+
+.banner-vote {
+  top: 44%;
+  left: -20px;
+}
+
+.banner-cat {
+  width: 361px;
+  height: 407px;
+  bottom: -16px;
+  right: -16px;
 }
