--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -318,7 +318,8 @@ $theme-colors: (
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "dark":       $dark
+  "dark":       $dark,
+  "middle":     $middle
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -554,8 +555,8 @@ $border-color-translucent:    rgba($black, .175) !default;
 
 // scss-docs-start border-radius-variables
 $border-radius:               1rem !default;
-$border-radius-sm:            3rem !default;
-$border-radius-lg:            .5rem !default;
+$border-radius-sm:            .5rem !default;
+$border-radius-lg:            3rem !default;
 $border-radius-xl:            .375rem !default;
 $border-radius-xxl:           .25rem !default;
 $border-radius-pill:          50rem !default;
@@ -637,7 +638,7 @@ $font-weight-base:            $font-weight-normal !default;
 
 $line-height-base:            1.5 !default;
 $line-height-sm:              1.25 !default;
-$line-height-lg:              2 !default;
+$line-height-lg:              1.75 !default; //custom
 
 $h1-font-size:                $font-size-base * 2.5 !default; 
 $h2-font-size:                $font-size-base * 2 !default;
